Changes to Final 2

--- a/package.json
+++ b/package.json
@@ -10,17 +10,28 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@emotion/react": "^11.13.3",
+        "@emotion/styled": "^11.13.0",
         "@fortawesome/fontawesome-svg-core": "^6.6.0",
         "@fortawesome/free-solid-svg-icons": "^6.6.0",
         "@fortawesome/react-fontawesome": "^0.2.2",
+        "@mui/icons-material": "^6.0.2",
+        "@mui/material": "^6.0.2",
         "axios": "^1.7.3",
+        "cd": "^0.3.3",
+        "create": "^0.0.2",
         "json-server": "^1.0.0-beta.1",
         "prop-types": "^15.8.1",
         "react": "^18.2.0",
+        "react-app": "^1.1.2",
+        "react-calendar": "^5.0.0",
         "react-dom": "^18.2.0",
+        "react-player": "^2.16.0",
         "react-responsive-carousel": "^3.2.23",
         "react-router-dom": "^6.24.1",
+        "react-video-player": "^1.0.0",
         "sass": "^1.77.6",
+        "screenfull": "^6.0.2",
         "styled-components": "^6.1.6",
         "uuid": "^10.0.0"
     },
